
--18 Jun 2019--
-AvdamCalc- (Changed name to CombatStatsCalc)
Tweaked it to actually work if damage and hits started as 'nil'
Changed it so that it ignores misses. 
Added an alias 'avdammute' to stop it from saying "Damage Captured" every time you do damage.
Added an accuracy calculator that divides damaging hits by total attacks and gives you a percent to two decimal points.

--19 Jun 2019--
-Autoresearch
Added autoresearch. autoresearchstart in a library to automatically research all your skills under 90

--21 Jun 2019--
-AutoCargo
Fixed it to actually support more than a two planet circuit.
Added "cargoprofits" to see your net profit.
Fixed minor typos and formatting issues.

-AutoResearch
Fixed it to research those pesky skills that include an underscore

--22 Jun 2019--
Tweaked autoflight so that if it hits a restricted pad it doesn't set the landing pad for the rest of the route to 1

--27 Jun 2019--
-Buildship
Added buildship script. Name a ship with a 'buildship add <ship name>' and as long as the proper building materials are on the ground/in your inv it will build the ship to completion.
Does not currently support a list of multiple ships, or restarting the build if you get too tired(I've built several ships in a row with the script and never hit that level of movement drain,
so I didn't add it cause I never saw the line that says you're too tired. If someone discords me @zakattack with the echo I'll add the trigger.
Includes its own botting trigger, so please disable your own.

-Misc
Added a little script in most packages to send an echo with the relevant help alias on profile load.

--6 Jul 2019
-Buildship
Added more gag triggers to gag others in the room building ships.
Added buildship.rest to rest for 120 seconds and then resume building.

-Misc
Cleaned up trigger and alias naming so it looks more uniform and less like an 8 year old wrote it. 