@@ -5,22 +5,12 @@
 		<Trigger isActive="yes" isFolder="no" isTempTrigger="no" isMultiline="no" isPerlSlashGOption="no" isColorizerTrigger="no" isFilterTrigger="no" isSoundTrigger="no" isColorTrigger="no" isColorTriggerFg="no" isColorTriggerBg="no">
 			<name>combatstats.getdamage</name>
 			<script>if not damage then damage = 0 end
-if not hits then hits = 0 end
-if not misses then misses = 0 end
-if not attacks then attacks = 0 end
 
-if tonumber(matches[2]) == 0 then 
-	misses = misses + 1
-	attacks = attacks + 1
-	if avdammute == false then
-		cecho("&lt;dodger_blue&gt;Miss recorded")
-	end
+if tonumber(matches[2]) == 0 then
 	return
 end
 
 damage = damage + matches[2]
-hits = hits + 1
-attacks = attacks + 1
 if avdammute == false then
 	cecho("&lt;dodger_blue&gt;Damage captured")
 end</script>
@@ -41,19 +31,170 @@ end</script>
 				<integer>1</integer>
 			</regexCodePropertyList>
 		</Trigger>
+		<Trigger isActive="yes" isFolder="no" isTempTrigger="no" isMultiline="no" isPerlSlashGOption="no" isColorizerTrigger="no" isFilterTrigger="no" isSoundTrigger="no" isColorTrigger="no" isColorTriggerFg="no" isColorTriggerBg="no">
+			<name>combatstats.gethit.given</name>
+			<script>if not hitsgiven then hitsgiven = 0 end
+if not attacks then attacks = 0 end
+hitsgiven = hitsgiven + 1
+attacks = attacks + 1
+if avdammute == false then
+	cecho("&lt;dodger_blue&gt;hitsgiven recorded")
+end</script>
+			<triggerType>0</triggerType>
+			<conditonLineDelta>0</conditonLineDelta>
+			<mStayOpen>0</mStayOpen>
+			<mCommand></mCommand>
+			<packageName></packageName>
+			<mFgColor>#ff0000</mFgColor>
+			<mBgColor>#ffff00</mBgColor>
+			<mSoundFile></mSoundFile>
+			<colorTriggerFgColor>#000000</colorTriggerFgColor>
+			<colorTriggerBgColor>#000000</colorTriggerBgColor>
+			<regexCodeList>
+				<string>^Your (.*) (.*) (.*)!$</string>
+				<string>^Your (.*) (.*) (.*).$</string>
+			</regexCodeList>
+			<regexCodePropertyList>
+				<integer>1</integer>
+				<integer>1</integer>
+			</regexCodePropertyList>
+		</Trigger>
+		<Trigger isActive="yes" isFolder="no" isTempTrigger="no" isMultiline="no" isPerlSlashGOption="no" isColorizerTrigger="no" isFilterTrigger="no" isSoundTrigger="no" isColorTrigger="no" isColorTriggerFg="no" isColorTriggerBg="no">
+			<name>combatstats.getmiss</name>
+			<script>if not misses then misses = 0 end
+if not attacks then attacks = 0 end
+misses = misses + 1
+attacks = attacks + 1
+if avdammute == false then
+	cecho("&lt;dodger_blue&gt;misses recorded.")
+end</script>
+			<triggerType>0</triggerType>
+			<conditonLineDelta>0</conditonLineDelta>
+			<mStayOpen>0</mStayOpen>
+			<mCommand></mCommand>
+			<packageName></packageName>
+			<mFgColor>#ff0000</mFgColor>
+			<mBgColor>#ffff00</mBgColor>
+			<mSoundFile></mSoundFile>
+			<colorTriggerFgColor>#000000</colorTriggerFgColor>
+			<colorTriggerBgColor>#000000</colorTriggerBgColor>
+			<regexCodeList>
+				<string>^(.*) dodges your attack.$</string>
+			</regexCodeList>
+			<regexCodePropertyList>
+				<integer>1</integer>
+			</regexCodePropertyList>
+		</Trigger>
+		<Trigger isActive="yes" isFolder="no" isTempTrigger="no" isMultiline="no" isPerlSlashGOption="no" isColorizerTrigger="no" isFilterTrigger="no" isSoundTrigger="no" isColorTrigger="no" isColorTriggerFg="no" isColorTriggerBg="no">
+			<name>combatstats.getdodge</name>
+			<script>if not dodges then dodges = 0 end
+dodges = dodges + 1
+if avdammute == false then
+	cecho("&lt;dodger_blue&gt;dodges recorded")
+end</script>
+			<triggerType>0</triggerType>
+			<conditonLineDelta>0</conditonLineDelta>
+			<mStayOpen>0</mStayOpen>
+			<mCommand></mCommand>
+			<packageName></packageName>
+			<mFgColor>#ff0000</mFgColor>
+			<mBgColor>#ffff00</mBgColor>
+			<mSoundFile></mSoundFile>
+			<colorTriggerFgColor>#000000</colorTriggerFgColor>
+			<colorTriggerBgColor>#000000</colorTriggerBgColor>
+			<regexCodeList>
+				<string>^You dodge (.*) attack.$</string>
+				<string>^(.*) misses you.$</string>
+			</regexCodeList>
+			<regexCodePropertyList>
+				<integer>1</integer>
+				<integer>1</integer>
+			</regexCodePropertyList>
+		</Trigger>
+		<Trigger isActive="yes" isFolder="no" isTempTrigger="no" isMultiline="no" isPerlSlashGOption="no" isColorizerTrigger="no" isFilterTrigger="no" isSoundTrigger="no" isColorTrigger="no" isColorTriggerFg="no" isColorTriggerBg="no">
+			<name>combatstats.gethit.taken</name>
+			<script>if not hitstaken then hitstaken = 0 end
+hitstaken = hitstaken + 1
+if avdammute == false then
+	cecho("&lt;dodger_blue&gt;hitstaken recorded")
+end</script>
+			<triggerType>0</triggerType>
+			<conditonLineDelta>0</conditonLineDelta>
+			<mStayOpen>0</mStayOpen>
+			<mCommand></mCommand>
+			<packageName></packageName>
+			<mFgColor>#ff0000</mFgColor>
+			<mBgColor>#ffff00</mBgColor>
+			<mSoundFile></mSoundFile>
+			<colorTriggerFgColor>#000000</colorTriggerFgColor>
+			<colorTriggerBgColor>#000000</colorTriggerBgColor>
+			<regexCodeList>
+				<string>^(.*) (.*) (.*) you!$</string>
+				<string>^(.*) (.*) (.*) you.$</string>
+			</regexCodeList>
+			<regexCodePropertyList>
+				<integer>1</integer>
+				<integer>1</integer>
+			</regexCodePropertyList>
+		</Trigger>
 	</TriggerPackage>
 	<TimerPackage />
 	<AliasPackage>
 		<Alias isActive="yes" isFolder="no">
 			<name>combatstats clear</name>
 			<script>damage = 0
-hits = 0
+hitsgiven = 0
+hitstaken = 0
+dodges = 0
 misses = 0
 attacks = 0
-cecho("&lt;dodger_blue&gt;Avdam cleared")</script>
+cecho("\n&lt;dodger_blue&gt;Combatstats cleared")</script>
 			<command></command>
 			<packageName></packageName>
 			<regex>^combatstats clear$</regex>
+		</Alias>
+		<Alias isActive="yes" isFolder="no">
+			<name>combatstats print</name>
+			<script>if not damage then damage = 0 end
+if not attacks then attacks = 0 end
+if not hitsgiven then hitsgiven = 0 end
+if not misses then misses = 0 end
+if not hitstaken then hitstaken = 0 end
+if not dodges then dodges = 0 end
+
+cecho("\n\n&lt;sienna&gt;Raw data:")
+cecho("\n&lt;GreenYellow&gt;Damage     = " .. damage)
+cecho("\n&lt;GreenYellow&gt;Attacks    = " .. attacks)
+cecho("\n&lt;GreenYellow&gt;Hits given = " .. hitsgiven)
+cecho("\n&lt;GreenYellow&gt;Misses     = " .. misses)
+cecho("\n&lt;GreenYellow&gt;Hits taken = " .. hitstaken)
+cecho("\n&lt;GreenYellow&gt;Dodges     = " .. dodges)
+
+if attacks == 0 then 
+	cecho("\n\n&lt;dodger_blue&gt;Average damage = 0")
+else
+	cecho("\n\n&lt;dodger_blue&gt;Average damage = " .. damage/attacks)
+end
+
+if attacks == 0 then
+	cecho("\n&lt;dodger_blue&gt;Accuracy = 0")
+else
+	accuracy = hitsgiven/attacks*100
+	cecho("\n&lt;dodger_blue&gt;Accuracy = " .. string.format("&lt;dodger_blue&gt; %.2f", accuracy) .. "%")
+end
+
+if dodges == 0 then
+	cecho("\n&lt;dodger_blue&gt;Dodge rate = 0")
+else
+	enemytotalattacks = hitstaken + dodges
+	dodgerate = dodges/enemytotalattacks*100
+	cecho("\n&lt;dodger_blue&gt;Dodge rate = " .. string.format("&lt;dodger_blue&gt; %.2f", dodgerate) .. "%")
+end
+
+</script>
+			<command></command>
+			<packageName></packageName>
+			<regex>^combatstats print$</regex>
 		</Alias>
 		<Alias isActive="yes" isFolder="no">
 			<name>combatstats help</name>
@@ -67,25 +208,14 @@ cecho("\n&lt;dodger_blue&gt;combatstats mute  - Mute the 'damage grabbed' and 'h
 			<regex>^combatstats help$</regex>
 		</Alias>
 		<Alias isActive="yes" isFolder="no">
-			<name>combatstats print</name>
-			<script>avdam = damage/hits
-accuracy = misses/attacks * 100
-
-cecho("\n&lt;dodger_blue&gt;Average damage: " .. damage .. "/" .. hits .. "="..avdam .. "\n")
-cecho("&lt;dodger_blue&gt;Total Accuracy: " .. misses .. "/" .. attacks .. "=".. string.format("&lt;dodger_blue&gt; %.2f", accuracy) .."%\n")</script>
-			<command></command>
-			<packageName></packageName>
-			<regex>^combatstats print$</regex>
-		</Alias>
-		<Alias isActive="yes" isFolder="no">
 			<name>combatstats mute</name>
 			<script>if not avdammute then avdammute = false end
 if avdammute == false then
 	avdammute = true
-	cecho("\n&lt;dodger_blue&gt;Avdam muted.")
+	cecho("\n&lt;dodger_blue&gt;Combatstats muted.")
 elseif avdammute == true then
 	avdammute = false
-	cecho("\n&lt;dodger_blue&gt;Avdam unmuted.")
+	cecho("\n&lt;dodger_blue&gt;Combatstats unmuted.")
 end</script>
 			<command></command>
 			<packageName></packageName>
